[gd_scene load_steps=30 format=3 uid="uid://1uoi6aia1qhh"]

[ext_resource type="Script" path="res://scripts/menu/UpdateVars.gd" id="1_7p613"]
[ext_resource type="Texture2D" uid="uid://5u7n2u4erb06" path="res://images/ruwo.png" id="3_il0bq"]
[ext_resource type="Script" path="res://scripts/menu/MapList.gd" id="3_pwoq8"]
[ext_resource type="Script" path="res://scripts/buttons/MapButton.gd" id="5_6w867"]
[ext_resource type="Script" path="res://scripts/menu/Import.gd" id="6_4dtfb"]
[ext_resource type="Texture2D" uid="uid://dim6m2c6rupcg" path="res://images/flux.png" id="6_mw0vg"]
[ext_resource type="Script" path="res://scripts/menu/MapInfo.gd" id="7_yyn24"]
[ext_resource type="FontFile" uid="uid://b5o12budjhyv7" path="res://fonts/font.ttf" id="8_58afk"]
[ext_resource type="PackedScene" uid="uid://dxmi7p40ic26a" path="res://prefabs/transition.tscn" id="9_4cwsh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pdf3y"]

[sub_resource type="LabelSettings" id="LabelSettings_keemo"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_som2a"]
font = ExtResource("8_58afk")
font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_r2ubh"]
font = ExtResource("8_58afk")
font_size = 17

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukrn5"]
bg_color = Color(0.0941176, 0.0784314, 0.0627451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hucv2"]

[sub_resource type="Theme" id="Theme_2pltl"]

[sub_resource type="Theme" id="Theme_5d22k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kttam"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_25olc"]
default_font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mald1"]
bg_color = Color(0.364706, 0.364706, 0.364706, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ltw7d"]
font = ExtResource("8_58afk")
font_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6ite"]
bg_color = Color(0.0941176, 0.0784314, 0.0627451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3su5l"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_8jruu"]
font = ExtResource("8_58afk")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_jh32p"]
font = ExtResource("8_58afk")
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_u4wlw"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_nsaei"]
font_color = Color(1, 1, 1, 0.454902)

[sub_resource type="Shader" id="Shader_81pu1"]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float circle_size : hint_range(0.0, 1.05);
uniform float screen_width;
uniform float screen_height;

void fragment() {
	float ratio = screen_width / screen_height;
	float dist = distance(vec2(0.5, 0.5), vec2(mix(0.5, UV.x, ratio), UV.y));
	COLOR.a = step(circle_size, dist);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q58ik"]
shader = SubResource("Shader_81pu1")
shader_parameter/circle_size = 1.05
shader_parameter/screen_width = 1920.0
shader_parameter/screen_height = 1080.0

[node name="Control" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7p613")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0901961, 0.0901961, 1)

[node name="MapList" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -665.0
grow_horizontal = 0
grow_vertical = 2

[node name="MapListBackground" type="ColorRect" parent="MapList"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -666.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="Ruwo" type="TextureRect" parent="MapList"]
modulate = Color(1, 1, 1, 0.219608)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -324.0
offset_top = -648.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("3_il0bq")
expand_mode = 1
stretch_mode = 4

[node name="MapListScrollContainer" type="ScrollContainer" parent="MapList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("3_pwoq8")

[node name="MapScrollVbox" type="VBoxContainer" parent="MapList/MapListScrollContainer"]
layout_mode = 2

[node name="ReloadMapList" type="Button" parent="MapList/MapListScrollContainer/MapScrollVbox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("8_58afk")
theme_override_font_sizes/font_size = 20
text = "Reload"

[node name="HSeparator" type="HSeparator" parent="MapList/MapListScrollContainer/MapScrollVbox"]
visible = false
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_pdf3y")

[node name="MapButton" type="Button" parent="MapList/MapListScrollContainer/MapScrollVbox"]
layout_mode = 2
text = "                                                                                     
                                                                                                                                                           
                                                                                                                                                           "
script = ExtResource("5_6w867")

[node name="SongName" type="Label" parent="MapList/MapListScrollContainer/MapScrollVbox/MapButton"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 17.0
offset_right = -106.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_58afk")
theme_override_font_sizes/font_size = 12
text = "Billy Sick - Balls In Your Jaws
"
label_settings = SubResource("LabelSettings_keemo")
clip_text = true

[node name="Diff" type="Label" parent="MapList/MapListScrollContainer/MapScrollVbox/MapButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 148.0
offset_top = -13.0
offset_right = -15.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_58afk")
theme_override_font_sizes/font_size = 14
text = "put my balls in your jaws"
label_settings = SubResource("LabelSettings_som2a")
horizontal_alignment = 2
vertical_alignment = 1
clip_text = true

[node name="Mapper" type="Label" parent="MapList/MapListScrollContainer/MapScrollVbox/MapButton"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 24.0
offset_top = 2.0
offset_right = 24.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_58afk")
theme_override_font_sizes/font_size = 14
text = "can i - 99:99"
label_settings = SubResource("LabelSettings_r2ubh")

[node name="Changeables" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -301.0
offset_right = -666.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_ukrn5")

[node name="Mods" type="TabBar" parent="Changeables"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Changeables/Mods"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)
metadata/_edit_use_anchors_ = true

[node name="ModsVbox" type="VBoxContainer" parent="Changeables/Mods"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedHbox" type="HBoxContainer" parent="Changeables/Mods/ModsVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Mods/ModsVbox/SpeedHbox"]
layout_mode = 2
text = "Speed:"
label_settings = SubResource("LabelSettings_hucv2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="SpinBox" parent="Changeables/Mods/ModsVbox/SpeedHbox"]
layout_mode = 2
step = 0.01
value = 1.0
suffix = "x"
custom_arrow_step = 0.1

[node name="Settings" type="TabBar" parent="Changeables"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Changeables/Settings"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="SettingTypes" type="TabContainer" parent="Changeables/Settings"]
layout_mode = 0
offset_right = 488.0
offset_bottom = 270.0
theme = SubResource("Theme_2pltl")

[node name="Note" type="TabBar" parent="Changeables/Settings/SettingTypes"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Changeables/Settings/SettingTypes/Note"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="NoteVbox" type="VBoxContainer" parent="Changeables/Settings/SettingTypes/Note"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="ARHbox" type="HBoxContainer" parent="Changeables/Settings/SettingTypes/Note/NoteVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Settings/SettingTypes/Note/NoteVbox/ARHbox"]
layout_mode = 2
text = "AR: "
label_settings = SubResource("LabelSettings_hucv2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AR" type="SpinBox" parent="Changeables/Settings/SettingTypes/Note/NoteVbox/ARHbox"]
layout_mode = 2
max_value = 200.0
step = 0.01
custom_arrow_step = 0.1

[node name="SDHbox" type="HBoxContainer" parent="Changeables/Settings/SettingTypes/Note/NoteVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Settings/SettingTypes/Note/NoteVbox/SDHbox"]
layout_mode = 2
text = "SD: "
label_settings = SubResource("LabelSettings_hucv2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SD" type="SpinBox" parent="Changeables/Settings/SettingTypes/Note/NoteVbox/SDHbox"]
layout_mode = 2
max_value = 200.0
step = 0.01
custom_arrow_step = 0.1

[node name="FadeHbox" type="HBoxContainer" parent="Changeables/Settings/SettingTypes/Note/NoteVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Settings/SettingTypes/Note/NoteVbox/FadeHbox"]
layout_mode = 2
text = "Enable Fade:"
label_settings = SubResource("LabelSettings_hucv2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnableFade" type="CheckBox" parent="Changeables/Settings/SettingTypes/Note/NoteVbox/FadeHbox"]
layout_mode = 2
alignment = 2

[node name="UI" type="TabBar" parent="Changeables/Settings/SettingTypes"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Changeables/Settings/SettingTypes/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="UIVbox" type="VBoxContainer" parent="Changeables/Settings/SettingTypes/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnableRuwoCheckbox" type="CheckBox" parent="Changeables/Settings/SettingTypes/UI/UIVbox"]
layout_mode = 2
button_pressed = true
text = "Enable Ruwo on map list"

[node name="Sound" type="TabBar" parent="Changeables/Settings/SettingTypes"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Changeables/Settings/SettingTypes/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="SoundVbox" type="VBoxContainer" parent="Changeables/Settings/SettingTypes/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicVolHbox" type="HBoxContainer" parent="Changeables/Settings/SettingTypes/Sound/SoundVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Settings/SettingTypes/Sound/SoundVbox/MusicVolHbox"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_hucv2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="SpinBox" parent="Changeables/Settings/SettingTypes/Sound/SoundVbox/MusicVolHbox"]
layout_mode = 2
rounded = true
suffix = "%"

[node name="Sets" type="TabBar" parent="Changeables/Settings/SettingTypes"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Changeables/Settings/SettingTypes/Sets"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="SetsVbox" type="VBoxContainer" parent="Changeables/Settings/SettingTypes/Sets"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="NotesetHbox" type="HBoxContainer" parent="Changeables/Settings/SettingTypes/Sets/SetsVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Settings/SettingTypes/Sets/SetsVbox/NotesetHbox"]
layout_mode = 2
text = "Noteset:"

[node name="Noteset" type="OptionButton" parent="Changeables/Settings/SettingTypes/Sets/SetsVbox/NotesetHbox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Cursor" type="TabBar" parent="Changeables/Settings/SettingTypes"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Changeables/Settings/SettingTypes/Cursor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="CursorVbox" type="VBoxContainer" parent="Changeables/Settings/SettingTypes/Cursor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="CursorScaleHbox" type="HBoxContainer" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox/CursorScaleHbox"]
layout_mode = 2
text = "Scale:"
label_settings = SubResource("LabelSettings_hucv2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorScale" type="SpinBox" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox/CursorScaleHbox"]
layout_mode = 2
step = 0.01

[node name="CursorSensHbox" type="HBoxContainer" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox/CursorSensHbox"]
layout_mode = 2
text = "Sensitivity:"
label_settings = SubResource("LabelSettings_hucv2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorSensitivity" type="SpinBox" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox/CursorSensHbox"]
layout_mode = 2
step = 0.01

[node name="SpinHbox" type="HBoxContainer" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox"]
layout_mode = 2

[node name="Label" type="Label" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox/SpinHbox"]
layout_mode = 2
text = "Spin:"
label_settings = SubResource("LabelSettings_hucv2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnableSpin" type="CheckBox" parent="Changeables/Settings/SettingTypes/Cursor/CursorVbox/SpinHbox"]
layout_mode = 2
button_pressed = true

[node name="SaveSettings" type="Button" parent="Changeables/Settings"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -119.0
offset_bottom = 22.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("8_58afk")
theme_override_font_sizes/font_size = 19
text = "Save settings
"

[node name="Import" type="TabBar" parent="Changeables"]
visible = false
layout_mode = 2
script = ExtResource("6_4dtfb")

[node name="ColorRect" type="ColorRect" parent="Changeables/Import"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Changeables/Import"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = 6.0
offset_right = -31.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator2" type="HSeparator" parent="Changeables/Import/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_5d22k")
theme_override_styles/separator = SubResource("StyleBoxFlat_kttam")

[node name="ImportFromTxtData" type="Button" parent="Changeables/Import/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = SubResource("Theme_25olc")
theme_override_styles/normal = SubResource("StyleBoxFlat_mald1")
text = "Import from .txt data"

[node name="HSeparator" type="HSeparator" parent="Changeables/Import/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_5d22k")
theme_override_styles/separator = SubResource("StyleBoxFlat_kttam")

[node name="ImportFromSSPMV2" type="Button" parent="Changeables/Import/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = SubResource("Theme_25olc")
theme_override_styles/normal = SubResource("StyleBoxFlat_mald1")
text = "Import from sspmv2"

[node name="Credits" type="TabBar" parent="Changeables"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Changeables/Credits"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Changeables/Credits"]
layout_mode = 2
offset_left = 1.0
offset_top = 8.0
offset_right = 488.0
offset_bottom = 272.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Changeables/Credits/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Credits"

[node name="Label2" type="Label" parent="Changeables/Credits/VBoxContainer"]
layout_mode = 2
text = "Anya Sterling-Palmari: Starting the game and most contributions."
label_settings = SubResource("LabelSettings_ltw7d")

[node name="HSeparator" type="HSeparator" parent="Changeables/Credits/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_5d22k")
theme_override_styles/separator = SubResource("StyleBoxFlat_kttam")

[node name="Label3" type="Label" parent="Changeables/Credits/VBoxContainer"]
layout_mode = 2
text = "Paisley \"fide\" Raylan - Co-owning flux, and contributing tons! And also
probably being my biggest motivation to continuing with the rewrite."
label_settings = SubResource("LabelSettings_ltw7d")

[node name="HSeparator2" type="HSeparator" parent="Changeables/Credits/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_5d22k")
theme_override_styles/separator = SubResource("StyleBoxFlat_kttam")

[node name="Label4" type="Label" parent="Changeables/Credits/VBoxContainer"]
layout_mode = 2
text = "Coco Lennon - Providing tons of feedback and testing flux."
label_settings = SubResource("LabelSettings_ltw7d")

[node name="HSeparator3" type="HSeparator" parent="Changeables/Credits/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_5d22k")
theme_override_styles/separator = SubResource("StyleBoxFlat_kttam")

[node name="Label5" type="Label" parent="Changeables/Credits/VBoxContainer"]
layout_mode = 2
text = "cat person - Being one of the first to test and provide feedback on the
origional flux. Also motivating me to continue writing flux."
label_settings = SubResource("LabelSettings_ltw7d")

[node name="MapInfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -666.0
offset_bottom = -301.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b6ite")
script = ExtResource("7_yyn24")

[node name="JacketBG" type="ColorRect" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -310.0
offset_bottom = 311.0
grow_horizontal = 0
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="Jacket" type="TextureRect" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -305.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 305.0
grow_horizontal = 0
texture = ExtResource("6_mw0vg")
expand_mode = 1

[node name="ArtistAndMapper" type="Label" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 7.0
offset_top = 24.0
offset_right = -1.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_58afk")
text = "artist (mapper)"
label_settings = SubResource("LabelSettings_3su5l")

[node name="SongLength" type="Label" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 47.0
offset_right = 8.0
offset_bottom = 74.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_58afk")
text = "0:00"
label_settings = SubResource("LabelSettings_8jruu")

[node name="SongName" type="Label" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 1.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_58afk")
text = "song name"
label_settings = SubResource("LabelSettings_jh32p")

[node name="Max Combo" type="Label" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 200.0
offset_right = 8.0
offset_bottom = 239.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_58afk")
text = "Max Combo: 0
"
label_settings = SubResource("LabelSettings_u4wlw")

[node name="Accuracy" type="Label" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 234.0
offset_right = 8.0
offset_bottom = 273.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_58afk")
text = "Accuracy: 0"
label_settings = SubResource("LabelSettings_u4wlw")

[node name="Misses" type="Label" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 269.0
offset_right = 8.0
offset_bottom = 308.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_58afk")
text = "Misses: 0"
label_settings = SubResource("LabelSettings_u4wlw")

[node name="PassedOrFailed" type="Label" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 165.0
offset_right = 8.0
offset_bottom = 187.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_58afk")
text = "Passed!"
label_settings = SubResource("LabelSettings_u4wlw")

[node name="PlayButton" type="Button" parent="MapInfoPanel"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -55.0
offset_right = 237.0
offset_bottom = -3.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_58afk")
theme_override_font_sizes/font_size = 21
text = "Play"

[node name="Version" type="Label" parent="MapInfoPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -474.0
offset_top = -3.0
offset_right = -5.0
offset_bottom = 24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("8_58afk")
text = "[version label]"
label_settings = SubResource("LabelSettings_nsaei")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Transition" parent="." instance=ExtResource("9_4cwsh")]
z_index = 4096
material = SubResource("ShaderMaterial_q58ik")
layout_mode = 1

[connection signal="pressed" from="MapList/MapListScrollContainer/MapScrollVbox/ReloadMapList" to="MapList/MapListScrollContainer" method="_on_reload_map_list_pressed"]
[connection signal="pressed" from="MapList/MapListScrollContainer/MapScrollVbox/MapButton" to="MapList/MapListScrollContainer/MapScrollVbox/MapButton" method="_on_pressed"]
[connection signal="selected" from="MapList/MapListScrollContainer/MapScrollVbox/MapButton" to="MapInfoPanel" method="_on_map_button_selected"]
[connection signal="value_changed" from="Changeables/Mods/ModsVbox/SpeedHbox/Speed" to="." method="_on_speed_value_changed"]
[connection signal="value_changed" from="Changeables/Settings/SettingTypes/Note/NoteVbox/ARHbox/AR" to="." method="_on_ar_value_changed"]
[connection signal="value_changed" from="Changeables/Settings/SettingTypes/Note/NoteVbox/SDHbox/SD" to="." method="_on_sd_value_changed"]
[connection signal="toggled" from="Changeables/Settings/SettingTypes/Note/NoteVbox/FadeHbox/EnableFade" to="." method="_on_enable_fade_toggled"]
[connection signal="toggled" from="Changeables/Settings/SettingTypes/UI/UIVbox/EnableRuwoCheckbox" to="." method="_on_enable_ruwo_checkbox_toggled"]
[connection signal="value_changed" from="Changeables/Settings/SettingTypes/Sound/SoundVbox/MusicVolHbox/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Changeables/Settings/SettingTypes/Cursor/CursorVbox/CursorScaleHbox/CursorScale" to="." method="_on_cursor_scale_value_changed"]
[connection signal="value_changed" from="Changeables/Settings/SettingTypes/Cursor/CursorVbox/CursorSensHbox/CursorSensitivity" to="." method="_on_cursor_sensitivity_value_changed"]
[connection signal="toggled" from="Changeables/Settings/SettingTypes/Cursor/CursorVbox/SpinHbox/EnableSpin" to="." method="_on_enable_spin_toggled"]
[connection signal="pressed" from="Changeables/Settings/SaveSettings" to="." method="_on_save_settings_pressed"]
[connection signal="pressed" from="Changeables/Import/VBoxContainer/ImportFromTxtData" to="Changeables/Import" method="_on_import_from_txt_data_pressed"]
[connection signal="pressed" from="MapInfoPanel/PlayButton" to="MapInfoPanel" method="_on_play_button_pressed"]

[editable path="Transition"]
